// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when active 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: inline-block;
  box-sizing: border-box;
  padding: 12px;
  margin-right: 12px;
  font-size: 16px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(0,3,6,0.87);
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  outline: none;
  color: #0071CE;
  border-bottom-color: #0071CE;
}

.c0:hover {
  color: #0071CE;
}

.c0:focus {
  border-bottom-color: rgba(0,3,6,0.26);
}

<a
  className="c0"
>
  Test
</a>
`;

exports[`renders without crashing 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: inline-block;
  box-sizing: border-box;
  padding: 12px;
  margin-right: 12px;
  font-size: 16px;
  font-weight: 700;
  line-height: 1.25;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(0,3,6,0.87);
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  outline: none;
}

.c0:hover {
  color: #0071CE;
}

.c0:focus {
  border-bottom-color: rgba(0,3,6,0.26);
}

<a
  className="c0"
>
  Test
</a>
`;
